# vendas-cli

./: .coverage  README.md  pyproject.toml  sample_vendas.csv
src/vendas_cli/: cli.py  core.py  output.py  parser.py
src/vendas_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_core.py  test_output.py  test_parser.py
