[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vendas-cli"
version = "0.1.0"
description = "CLI para processamento de vendas em CSV"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
vendas-cli = "vendas_cli.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]